Fix html displaying and improved design (#2152)
* Fix p

* Add extra space

* Delete .DS_Store

* Remove unnecessary additions

* Remove cache

* Delete unnecessary files

* Added extra section spacing via css

--- a/src/backend/_scss/application.scss
+++ b/src/backend/_scss/application.scss
@@ -2377,6 +2377,10 @@ a.skip:hover {
   padding-right: 10px;
 }
 
+.endspacing {
+  padding-bottom: 25px;
+}
+
 // Filters for mobile view
 
 .dropdown-inner {
